2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Correctly handle some forgotten corner cases in the fix for #3427564.

2012-01-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* doc/sdccman.lyx:
	  Mention -mz180, -mr2k, named address spaces and use non-deprectaed form of sdcc-specific keywords.
	* src/SDCC.lex:
	  Remove support for deprecated keywords.
	* src/z80/gen.c:
	  Fixed bug #3427564.

2012-01-25 Borut Razem <borut.razem AT gmail.com>

	* device/lib/make51lib.bat: rewritten for ar / sdranlib

2012-01-23 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: pic14 enhanced cores enabled by default

2012-01-22 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure: corrected test if ar accepts -S option

2012-01-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug3475630.c,
	* support/regression/tests/bug3475656.c: fixed for mcs51, native eol
	* device/include/mcs51/stc12.h: new, added, thanks intron

2012-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3475630.c:
	  Fixed bug #3475630.
	* support/regression/tests/bug3475656.c:
	  Regression test for bug #3475656.

2012-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Enable some more peephole rules for the gbz80.

2012-01-21 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/bug2942343.c: corrected test if SDCC

2012-01-20 Borut Razem <borut.razem AT gmail.com>

	* device/lib/pic14/Makefile.am, device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.am,
	  device/lib/pic14/libm/Makefile.in:
	  added template for NEW_PICS 
	* device/non-free/lib/pic14/libdev/Makefile.in:
	  pic14 enhanced cores enabled by default

2012-01-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug2942343.c: disable for test-host