@@ -27,7 +27,7 @@ ifdef CROSSCOMPILING
   SDCCFLAGS += -I$(top_srcdir)
 endif
 
-SDCCFLAGS += -mgbz80 --less-pedantic --profile -DREENTRANT=
+SDCCFLAGS += -mgbz80 --less-pedantic --max-allocs-per-node 5 --profile -DREENTRANT=
 LINKFLAGS += gbz80.lib
 
 OBJEXT = .rel
