@@ -1,5 +1,14 @@
 2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* support/cpp/libcpp/internal.h,
+	  support/cpp/sdcpp.c,
+	  support/cpp/libcpp/lex.c:
+	  Remove support for _asm and _endasm, rename macros that had names reserved for the implementation.
+	* support/regression/tests/key.c:
+	  Regression test for obsolete keywords.
+
+2012-01-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/gen.c:
 	  Correctly handle some forgotten corner cases in the fix for #3427564.
 
